<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/proHiringLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/left_arrow"
                android:contentDescription="@string/logout_button"
                android:background="@null"
                android:scaleType="centerInside" />

        </LinearLayout>

        <TextView
            android:id="@+id/companyNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="8dp" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/homedefault" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:paddingTop="16dp">

                <ImageView
                    android:src="@drawable/hammerblue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp" />

                <TextView
                    android:id="@+id/servicesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/services_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="start" />
            </LinearLayout>

            <TextView
                android:id="@+id/servicesDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services_data"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:paddingTop="16dp">

                <ImageView
                    android:src="@drawable/audience"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp" />

                <TextView
                    android:id="@+id/socialMediaLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social_media_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="start" />
            </LinearLayout>

            <TextView
                android:id="@+id/socialMediaDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_media_data"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:paddingTop="16dp">

                <ImageView
                    android:src="@drawable/phone_call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp" />

                <TextView
                    android:id="@+id/contactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="start" />
            </LinearLayout>

            <TextView
                android:id="@+id/contactDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_data"
                android:textSize="16sp"
                android:paddingTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:paddingTop="16dp">

                <ImageView
                    android:src="@drawable/email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="8dp" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="start" />
            </LinearLayout>

            <TextView
                android:id="@+id/emailDataLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_data"
                android:textSize="16sp"
                android:paddingTop="8dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
