<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:id="@+id/mainFL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_bg"
            android:textSize="@dimen/txt_size"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginBottom="@dimen/image_radius"
            android:text="@string/email_user"
            android:layout_gravity="start|center_vertical" />

        <TextView
            android:id="@+id/tvCorreoNoVerificado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:text="@string/email_not_verified"
            android:visibility="gone"
            android:layout_marginStart="@dimen/sixteen"
            android:textColor="@color/design_default_color_error"
            android:textSize="@dimen/txt_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sixteen"
            android:layout_marginBottom="@dimen/margin_twenty"
            android:backgroundTint="@color/main_bg"
            android:text="@string/logout"
            android:textSize="@dimen/btn_size"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/sixteen"
            android:layout_gravity="end|center_vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReenviarVerificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginBottom="@dimen/sixteen"
            android:backgroundTint="@color/main_bg"
            app:cornerRadius="@dimen/sixteen"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_size"
            android:layout_marginStart="@dimen/sixteen"
            android:layout_marginEnd="@dimen/sixteen"
            android:text="@string/forward_verification_email"
            android:textAllCaps="false"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.navigation.fragment.NavHostFragment
        android:id="@+id/fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mainFL"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:navGraph="@navigation/nav_graph" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
