<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/proHiringLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/primary_color"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/logoutButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/exit"
                android:contentDescription="@string/logout_button"
                android:background="@null"
                android:scaleType="centerInside" />
        </LinearLayout>

        <TextView
            android:id="@+id/popularProjectsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/popular_projects"
            android:textColor="@color/secondayColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
